<resources>
    <string name="app_name">MyNews</string>

    <!-- Used in NavigationDrawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="travel">travel</string>
    <string name="sports">Sports</string>
    <string name="politics">Politics</string>
    <string name="entrepreneurs">Entrepreneurs</string>
    <string name="business">Business</string>
    <string name="arts">Arts</string>
</resources>
